test/basic/planmemory_reject_local_memref_alloc.pto
// RUN: not ptoas %s 2>&1 | FileCheck %s

module {
  func.func @reject_local_memref_alloc() {
    %ub = memref.alloc() : memref<16x16xf16, #pto.address_space<vec>>
    memref.dealloc %ub : memref<16x16xf16, #pto.address_space<vec>>
    return
  }
}

// CHECK: error: 'memref.alloc' op PlanMemory is tilebuf-only: local memref.alloc is unsupported; use pto.alloc_tile
